# qutee_robot_v3

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.txt  sdkconfig  sdkconfig.defaults
components/Adafruit_BNO055/: CMakeLists.txt
components/Adafruit_MAX1704X/: CMakeLists.txt
components/Adafruit_Sensor/: CMakeLists.txt
components/Dynamixel2Arduino/: CMakeLists.txt
components/Dynamixel2Arduino/src/: Dynamixel2Arduino.cpp  Dynamixel2Arduino.h
components/DynamixelSDK/: CMakeLists.txt
components/DynamixelSDK/include/dynamixel_sdk/: group_bulk_read.h  group_handler.h  group_sync_read.h  packet_handler.h  port_handler.h  port_handler_esp32.h
components/DynamixelSDK/src/dynamixel_sdk/: group_bulk_read.cpp  group_bulk_write.cpp  group_sync_read.cpp  group_sync_write.cpp  packet_handler.cpp  port_handler.cpp  port_handler_esp32.cpp  protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
extra_packages/Python-3.10.0/: Makefile  Makefile.pre  config.status  pyconfig.h
extra_packages/Python-3.10.0/Modules/: _abc.gcda  _codecsmodule.gcda  _collectionsmodule.gcda  _functoolsmodule.gcda  _iomodule.gcda  _localemodule.gcda  _math.gcda  _operator.gcda  _sre.gcda  _stat.gcda  _threadmodule.gcda  _tracemalloc.gcda  _weakref.gcda  atexitmodule.gcda  bufferedio.gcda  bytesio.gcda  errnomodule.gcda  faulthandler.gcda  fileio.gcda  gcmodule.gcda  getbuildinfo.gcda  getpath.gcda  iobase.gcda  itertoolsmodule.gcda  ld_so_aix  main.gcda  posixmodule.gcda  pwdmodule.gcda  signalmodule.gcda  stringio.gcda  symtablemodule.gcda  textio.gcda  timemodule.gcda  xxsubtype.gcda
extra_packages/Python-3.10.0/Objects/: abstract.gcda  accu.gcda  boolobject.gcda  bytearrayobject.gcda  bytes_methods.gcda  bytesobject.gcda  call.gcda  capsule.gcda  cellobject.gcda  classobject.gcda  codeobject.gcda  complexobject.gcda  descrobject.gcda  dictobject.gcda  enumobject.gcda  exceptions.gcda  fileobject.gcda  floatobject.gcda  frameobject.gcda  funcobject.gcda  genericaliasobject.gcda  genobject.gcda  interpreteridobject.gcda  iterobject.gcda  listobject.gcda  longobject.gcda  memoryobject.gcda  methodobject.gcda  moduleobject.gcda  namespaceobject.gcda  object.gcda  (+13 more)
main/: CMakeLists.txt  Kconfig.projbuild  Qutee.cpp  Qutee.hpp  QuteeDxlPortHandler.cpp  QuteeDxlPortHandler.hpp  idf_component.yml  main.cpp
(+60 files in other folders)
